force-app/main/default/objects/Customer__c/fields/Accept_terms_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Accept_terms_and_conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Understand Accept Terms and Conditio</label>
    <type>Checkbox</type>
</CustomField>