force-app/main/default/objects/Customer__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Formula field to display Account name from contact object</description>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display Account name from contact object</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>