force-app/main/default/objects/Customer__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>02</fullName>
                <isActive>false</isActive>
                <label>02</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>