force-app/main/default/objects/Customer__c/fields/Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Code__c</fullName>
    <label>Account Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>