force-app/main/default/objects/Customer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate customer account status</description>
    <inlineHelpText>Checkbox to indicate customer account status</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>