force-app/main/default/objects/Customer__c/fields/ACTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_DATE__c</fullName>
    <label>ACTIVE DATE</label>
    <type>Date</type>
</CustomField>