force-app/main/default/objects/Customer__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Formula field to display address from Premise Object</description>
    <formula>Premise__r.Address_2__c</formula>
    <inlineHelpText>Formula field to display address from Premise Object</inlineHelpText>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>