force-app/main/default/objects/Customer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Formula field to display address from Premise Object</description>
    <formula>IF(ISBLANK( Address_Text__c ),Premise__r.Address__c,Address_Text__c )</formula>
    <inlineHelpText>Formula field to display address from Premise Object</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>