force-app/main/default/objects/Customer__c/fields/Address_Not_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Not_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Not Verified</label>
    <type>Checkbox</type>
</CustomField>