force-app/main/default/objects/Customer__c/fields/Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Address_Text__c</fullName>
    <label>Address_Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>