force-app/main/default/objects/Customer__c/fields/Alt_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone2__c</fullName>
    <label>Alt Phone2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>