force-app/main/default/objects/Customer__c/fields/Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone__c</fullName>
    <label>Alt Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>