force-app/main/default/objects/Customer__c/fields/Apt_Floor__c.field-meta.xml
<CustomField>
    <fullName>Apt_Floor__c</fullName>
    <label>Apt/Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>