force-app/main/default/objects/Customer__c/fields/Are_you_interested_in_other_Energy_Effic__c.field-meta.xml
<CustomField>
    <fullName>Are_you_interested_in_other_Energy_Effic__c</fullName>
    <label>Are_you_interested_in_other_Energy_Effic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>