force-app/main/default/objects/Customer__c/fields/Best_Time_to_Call_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call_Mobile__c</fullName>
    <label>Best Time to Call Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>