force-app/main/default/objects/Customer__c/fields/Billing_Account_Number_With_Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number_With_Tenant_Id__c</fullName>
    <formula>Customer_Account_Number__c + Tenant_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Number With Tenant Id</label>
    <type>Text</type>
</CustomField>