force-app/main/default/objects/Customer__c/fields/Business_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_ID__c</fullName>
    <label>Business Partner ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>