force-app/main/default/objects/Customer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Formula field to display city from Premise Object</description>
    <formula>IF(ISBLANK( Address_Text__c ),Premise__r.City__c  ,City_Text__c )</formula>
    <inlineHelpText>Formula field to display city from Premise Object</inlineHelpText>
    <label>City</label>
    <type>Text</type>
</CustomField>