force-app/main/default/objects/Customer__c/fields/City_Text__c.field-meta.xml
<CustomField>
    <fullName>City_Text__c</fullName>
    <label>City_text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>