force-app/main/default/objects/Customer__c/fields/CLR_CNI_User_Type__c.field-meta.xml
<CustomField>
    <fullName>CLR_CNI_User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNI</fullName>
            </value>
            <value>
                <fullName>RESI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>