force-app/main/default/objects/Customer__c/fields/Commercial_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Opt Out</label>
    <type>Checkbox</type>
</CustomField>