force-app/main/default/objects/Customer__c/fields/Condo_association_or_Apartment_complex__c.field-meta.xml
<CustomField>
    <fullName>Condo_association_or_Apartment_complex__c</fullName>
    <label>Condo association or Apartment complex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>