force-app/main/default/objects/Customer__c/fields/Cooling_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Cooling_System_Type__c</fullName>
    <label>Cooling System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Air Conditioner</fullName>
            </value>
            <value>
                <fullName>Air Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Ground Source Heat Pump</fullName>
            </value>
            <value>
                <fullName>Ductless Mini-Split Heat Pump</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>