force-app/main/default/objects/Customer__c/fields/Cooling_Type__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Type__c</fullName>
    <label>Cooling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaporative Cooler</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Central Air Conditioner</fullName>
            </value>
            <value>
                <fullName>None/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>