force-app/main/default/objects/Customer__c/fields/Create_DSMTC__c.field-meta.xml
<CustomField>
    <fullName>Create_DSMTC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create DSMTC</label>
    <type>Checkbox</type>
</CustomField>