force-app/main/default/objects/Customer__c/fields/Created_by_TREES__c.field-meta.xml
<CustomField>
    <fullName>Created_by_TREES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by TREES</label>
    <type>Checkbox</type>
</CustomField>