force-app/main/default/objects/Customer__c/fields/Created_From_Online_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Online_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From Online Portal</label>
    <type>Checkbox</type>
</CustomField>