force-app/main/default/objects/Customer__c/fields/CUST_HOME_PHONE__c.field-meta.xml
<CustomField>
    <fullName>CUST_HOME_PHONE__c</fullName>
    <label>CUST HOME PHONE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>