force-app/main/default/objects/Customer__c/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <description>Customer account number</description>
    <externalId>true</externalId>
    <inlineHelpText>Customer account number</inlineHelpText>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>