force-app/main/default/objects/Customer__c/fields/Customer_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Status__c</fullName>
    <formula>&quot;Arto&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Status</label>
    <type>Text</type>
</CustomField>