force-app/main/default/objects/Customer__c/fields/Customer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Address__c</fullName>
    <label>Customer Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>