force-app/main/default/objects/Customer__c/fields/Customer_is_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Customer_is_Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer is Flexible</label>
    <type>Checkbox</type>
</CustomField>