force-app/main/default/objects/Customer__c/fields/Customer_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Not Found</label>
    <type>Checkbox</type>
</CustomField>