force-app/main/default/objects/Customer__c/fields/Customer_Not_Validated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Not Validated</label>
    <type>Checkbox</type>
</CustomField>