force-app/main/default/objects/Customer__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Picklist for Customer type (Residential, Commercial, ect...)</description>
    <inlineHelpText>Picklist for Customer type (Residential, Commercial, ect...)</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>