force-app/main/default/objects/Customer__c/fields/customerID__c.field-meta.xml
<CustomField>
    <fullName>customerID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>customerID</label>
    <type>Text</type>
</CustomField>