force-app/main/default/objects/Customer__c/fields/Date_Customer_Quit__c.field-meta.xml
<CustomField>
    <fullName>Date_Customer_Quit__c</fullName>
    <label>Date Customer Quit</label>
    <type>Date</type>
</CustomField>