force-app/main/default/objects/Customer__c/fields/Date_of_Decline__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Decline__c</fullName>
    <label>Date of Decline</label>
    <type>Date</type>
</CustomField>