force-app/main/default/objects/Customer__c/fields/Date_of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enrollment__c</fullName>
    <label>Date of Enrollment</label>
    <type>Date</type>
</CustomField>