force-app/main/default/objects/Customer__c/fields/DATE_TO__c.field-meta.xml
<CustomField>
    <fullName>DATE_TO__c</fullName>
    <label>DATE TO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>