force-app/main/default/objects/Customer__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test 1</fullName>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
            <value>
                <fullName>Test 3</fullName>
            </value>
            <value>
                <fullName>Test 4</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>