force-app/main/default/objects/Customer__c/fields/Did_the_customer_quit_the_program__c.field-meta.xml
<CustomField>
    <fullName>Did_the_customer_quit_the_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did the customer quit the program?</label>
    <type>Checkbox</type>
</CustomField>