force-app/main/default/objects/Customer__c/fields/Do_all_units_have_the_same_heating_type__c.field-meta.xml
<CustomField>
    <fullName>Do_all_units_have_the_same_heating_type__c</fullName>
    <label>Do all units have the same heating type?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>