force-app/main/default/objects/Customer__c/fields/Do_you_give_permission_to_send_you_text__c.field-meta.xml
<CustomField>
    <fullName>Do_you_give_permission_to_send_you_text__c</fullName>
    <label>Do you give permission to send you tex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>