force-app/main/default/objects/Customer__c/fields/Do_you_have_a_single_family_condo_or_apt__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_single_family_condo_or_apt__c</fullName>
    <label>Do you have a single-family condo or apt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-family</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Apartment building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>