force-app/main/default/objects/Customer__c/fields/Do_you_have_an_entertainment_center_or_h__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_entertainment_center_or_h__c</fullName>
    <label>Do you have an entertainment center or h</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes- I have both an entertainment center and/or a home office and am interested in smart strips</fullName>
            </value>
            <value>
                <fullName>No, I do not have either or I am not interested in smart strips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>