force-app/main/default/objects/Customer__c/fields/Do_you_live_there__c.field-meta.xml
<CustomField>
    <fullName>Do_you_live_there__c</fullName>
    <label>Do you live there?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>