force-app/main/default/objects/Customer__c/fields/Do_you_own_or_rent__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_or_rent__c</fullName>
    <label>Do you own or rent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>