force-app/main/default/objects/Customer__c/fields/Does_renter_have_landlord_permission__c.field-meta.xml
<CustomField>
    <fullName>Does_renter_have_landlord_permission__c</fullName>
    <label>Does renter have landlord permission?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>