force-app/main/default/objects/Customer__c/fields/Does_your_home_have_a_basement__c.field-meta.xml
<CustomField>
    <fullName>Does_your_home_have_a_basement__c</fullName>
    <label>Does your home have a basement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes- more than half finished</fullName>
            </value>
            <value>
                <fullName>Yes- less than half unfinished</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>