force-app/main/default/objects/Customer__c/fields/Does_your_home_have_recessed_lighting__c.field-meta.xml
<CustomField>
    <fullName>Does_your_home_have_recessed_lighting__c</fullName>
    <label>Does your home have recessed lighting?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>5 to 19</fullName>
            </value>
            <value>
                <fullName>20 to 40</fullName>
            </value>
            <value>
                <fullName>Over 40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>