force-app/main/default/objects/Customer__c/fields/DSMTracker_Product__c.field-meta.xml
<CustomField>
    <fullName>DSMTracker_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSMTracker Product</label>
    <referenceTo>DSMTracker_Product__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>