force-app/main/default/objects/Customer__c/fields/DSMTracker_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>DSMTracker_Product_Id__c</fullName>
    <formula>DSMTracker_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSMTracker Product Id</label>
    <type>Text</type>
</CustomField>