force-app/main/default/objects/Customer__c/fields/DURATION__c.field-meta.xml
<CustomField>
    <fullName>DURATION__c</fullName>
    <label>DURATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>