force-app/main/default/objects/Customer__c/fields/EBR_EFR_Customer__c.field-meta.xml
<CustomField>
    <fullName>EBR_EFR_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBR/EFR Customer</label>
    <type>Checkbox</type>
</CustomField>