force-app/main/default/objects/Customer__c/fields/Electric_Account__c.field-meta.xml
<CustomField>
    <fullName>Electric_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Electric Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electric Customers</relationshipLabel>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>