force-app/main/default/objects/Customer__c/fields/Electric_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Electric_Account_Number__c</fullName>
    <label>Electric Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>