force-app/main/default/objects/Customer__c/fields/Electric_provider__c.field-meta.xml
<CustomField>
    <fullName>Electric_provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electric provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers (Electric provider)</relationshipLabel>
    <relationshipName>Customers4</relationshipName>
    <type>Lookup</type>
</CustomField>