force-app/main/default/objects/Customer__c/fields/Electric_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Electric_Provider_Name__c</fullName>
    <label>Electric Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BGE</fullName>
            </value>
            <value>
                <fullName>PGE</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>