force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Formula field to display Email address from Contact Object</description>
    <formula>Email_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display Email address from Contact Object</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>