force-app/main/default/objects/Customer__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>