force-app/main/default/objects/Customer__c/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>