force-app/main/default/objects/Customer__c/fields/Esiid__c.field-meta.xml
<CustomField>
    <fullName>Esiid__c</fullName>
    <label>Esiid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>