force-app/main/default/objects/Customer__c/fields/Export_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Export_Email_Opt_In__c</fullName>
    <formula>IF(Email_Opt_In__c, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Email Opt In</label>
    <type>Text</type>
</CustomField>