force-app/main/default/objects/Customer__c/fields/Ext_Utility_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_Utility_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ext Utility ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>