force-app/main/default/objects/Customer__c/fields/External_Gas_Premise_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Gas_Premise_Number__c</fullName>
    <label>External Gas Premise Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>