force-app/main/default/objects/Customer__c/fields/EXTERNAL_PROJECT_ID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_PROJECT_ID__c</fullName>
    <label>EXTERNAL PROJECT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>