force-app/main/default/objects/Customer__c/fields/External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_ID__c</fullName>
    <label>External Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>