force-app/main/default/objects/Customer__c/fields/Failed_Registration_Fix__c.field-meta.xml
<CustomField>
    <fullName>Failed_Registration_Fix__c</fullName>
    <label>Resolution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No change required</fullName>
            </value>
            <value>
                <fullName>Typo in address</fullName>
            </value>
            <value>
                <fullName>Typo in name</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Name/address mismatch</fullName>
            </value>
            <value>
                <fullName>No record found</fullName>
            </value>
            <value>
                <fullName>API issue</fullName>
            </value>
            <value>
                <fullName>Wrong city/ZIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>