force-app/main/default/objects/Customer__c/fields/Failed_Registration_Information__c.field-meta.xml
<CustomField>
    <fullName>Failed_Registration_Information__c</fullName>
    <label>Failed Registration Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>